--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="hero" id="hero-section">
         <div class="hero-left">
           <h1 class="shimmer">Logic Runner</h1>
-          <p class="subtitle">Test your wits and master propositional logic through gameplay.</p>
+          <p class="subtitle">A simple prototype tool about Propositional Logic</p>
 
           <div class="topic-info">
             <div class="topic-title"><i class="fas fa-lightbulb"></i> Master Propositional Logic</div>
